# Editor

./: CMakeLists.txt  build.bat  build_test.txt  imgui.ini  level1.txt  renderdoc_settings.cap  todo.txt  world_items.txt
resources/shaders/: light.frag  light.vert  light_stencil.frag  light_stencil.vert  quad.frag  quad.vert
src/: app.cpp  app.h  constants.h  init.cpp  main.cpp  window.h
src/editor/: add_world_item_modal.cpp  add_world_item_modal.h  editor.cpp  editor.h  editor_windows.cpp  editor_windows.h  gridline.cpp  gridline.h  level_info.cpp  level_info.h  loader.cpp  loader.h  world_item.cpp  world_item.h  world_map.cpp  world_map.h
src/editorItems/: addWorldItemModal.cpp  addWorldItemModal.h  worldItem.cpp
src/editor_items/: editor_items.cpp  editor_items.h  loader.cpp  loader.h  world_item.cpp  world_item.h
src/imgui-filebrowser/: imfilebrowser.h
src/input/: input.cpp  input.h
src/renderer/: camera.cpp  camera.h  renderer.cpp  renderer.h
src/renderer/basic/: light.cpp  light.h  quad.cpp  quad.h
src/renderer/graphics/: buffers.cpp  buffers.h  mesh.cpp  mesh.h  render_resources.cpp  render_resources.h
src/transform/: transform.cpp
src/utils/: conversion.cpp  conversion.h  io.cpp  io.h  time.cpp  time.h
